GL/Projet_GL/src/test/deca/context/invalid/classes/appel_method_nn_classe.deca
// Description:
// Test contextuel : appel de méthode sur un type non-classe (int).
//
// Resultats:
//    Impossible d'appeler une methode sur un type non classe.
//    Erreur affichée: Can't Call a method on a non class object
//

{
   int a;

   // Doit etre refuse.
   a.f();
}


